--- a/src/renderer/src/components/AddBook.css
+++ b/src/renderer/src/components/AddBook.css
@@ -78,7 +78,8 @@
 }
 
 .form-group label {
-  display: block;
+  display: flex;
+  align-items: center;
   font-size: 0.875rem;
   font-weight: 500;
   color: #09090b;
